--- a/duoduo.plist
+++ b/duoduo.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://47.75.115.118:8091/duoduo0516.ipa</string>
+					<string>http://duoduodownload.zzgb.net.cn:8091/duoduo0517.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -19,7 +19,7 @@
 				<key>bundle-identifier</key>
 				<string>com.ZXJK.duoduoYoushe</string>
 				<key>bundle-version</key>
-				<string>1.1</string>
+				<string>1.2</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
